--- a/newdata.html
+++ b/newdata.html
@@ -1,6 +1,6 @@
 <html> 
 <head> 
-<title>2Data management</title>  
+<title>Data management</title>  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -57,6 +57,7 @@
                   <th>ID</th>
                   <th>KEY</th>
                   <th>Value</th>
+		  <th>Comment</th>
                   <th>Operations</th>
                 </tr>
             </thead>
@@ -66,6 +67,7 @@
                 <td class="id"></td>
                 <td class="key"></td>
                 <td class="value"></td>
+		<td class="Comment"></td>
                 <td class="operations" id="o-id"></td>
               </tr>
             </tbody>
